# aplikacja-bazy

./: README.md  aplikacja_administratora.py  aplikacja_kliencka.py  dodaj_klienta.py  pyproject.toml  stworz_baze.py  usun_tabele.py  wyslij.py  wyslij_testowe.py  wyszukiwanie_w_bazie.py  zapisz.py
csv/: adres_klienta.csv  adres_pocztowy.csv  domokrazcy(7).csv  historia_licznika(6).csv  klienci.csv  liczniki(6).csv  odczyty_licznika(6).csv
